--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "App.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "parcel index.html"
   },
   "author": "kushal",
   "license": "ISC",
@@ -15,5 +16,8 @@
   "devDependencies": {
     "parcel": "^2.9.2",
     "process": "^0.11.10"
-  }
+  },
+  "browserslist":[
+    "last 3 versions"
+  ]
 }
