--- a/swiggy/package.json
+++ b/swiggy/package.json
@@ -20,6 +20,8 @@
   ],
   "devDependencies": {
     "parcel": "^2.9.3",
-    "process": "^0.11.10"
+    "postcss": "^8.4.24",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.2"
   }
 }
