--- a/swiggy/package.json
+++ b/swiggy/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.0"
+    "react-router-dom": "^6.14.0",
+    "react-shimmer-effects-18": "^1.0.4"
   },
   "browserslist": [
     "last 3 versions"
