--- a/swiggy/package.json
+++ b/swiggy/package.json
@@ -2,7 +2,6 @@
   "name": "swiggy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "parcel index.html",
     "test": "jest"
@@ -11,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@swc/helpers": "^0.5.1",
     "framer-motion": "^10.12.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
