--- a/swiggy/package.json
+++ b/swiggy/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "parcel index.html",
-    "test": "jest"
+    "test": "jest",
+    "build":"npx parcel build index.html"
   },
   "keywords": [],
   "author": "",
