--- a/swiggy/package.json
+++ b/swiggy/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "parcel index.html",
     "test": "jest",
-    "build":"npx parcel build index.html"
+    "build": "npx parcel build index.html"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.14.0",
     "react-shimmer-effects-18": "^1.0.4"
   },
